[gd_scene load_steps=3 format=3 uid="uid://bgfj5snd88edn"]

[ext_resource type="Script" path="res://ui/score_boards/sim_score_board/sim_score_board.gd" id="1_x8mbj"]
[ext_resource type="PackedScene" uid="uid://bafgft0kin0gc" path="res://ui/score_boards/sim_score_board/score_stat_board/score_stat_board.tscn" id="2_8kuh5"]

[node name="SimScoreBoard" type="Control"]
custom_minimum_size = Vector2(263, 212)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_x8mbj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(263, 212)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreStatBoardPoint" parent="VBoxContainer" instance=ExtResource("2_8kuh5")]
layout_mode = 2

[node name="ScoreStatBoardGame" parent="VBoxContainer" instance=ExtResource("2_8kuh5")]
layout_mode = 2

[node name="ScoreStatBoardSet" parent="VBoxContainer" instance=ExtResource("2_8kuh5")]
layout_mode = 2

[node name="ScoreStatBoardMatch" parent="VBoxContainer" instance=ExtResource("2_8kuh5")]
layout_mode = 2
